# tachikoma

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
docs/architecture/: ADR-001-package-manager.md  ADR-002-linting-formatting.md  ADR-003-type-checker.md  ADR-004-testing-library.md  ADR-005-task-runner.md  ADR-006-logging-library.md  ADR-007-persistence-layer.md  ADR-008-system-prompt-composition.md  ADR-009-event-bus.md  ADR-010-semantic-versioning.md  README.md
docs/delta-designs/: DLT-001.md  DLT-002.md  DLT-003.md  DLT-004.md  DLT-005.md  DLT-006.md  DLT-008.md  DLT-010.md  DLT-012.md  DLT-013.md  DLT-018.md  DLT-020.md  DLT-021.md  DLT-023.md  DLT-024.md  DLT-025.md  DLT-026.md  DLT-027.md  DLT-028.md  DLT-029.md  DLT-030.md  DLT-032.md  DLT-034.md  DLT-036.md  DLT-037.md  DLT-038.md  DLT-041.md  DLT-072.md  DLT-073.md  DLT-079.md  DLT-084.md  DLT-087.md  DLT-090.md  DLT-091.md  DLT-092.md
docs/delta-plans/: DLT-001.md  DLT-002.md  DLT-003.md  DLT-005.md  DLT-006.md  DLT-008.md  DLT-010.md  DLT-012.md  DLT-013.md  DLT-018.md  DLT-020.md  DLT-021.md  DLT-023.md  DLT-024.md  DLT-025.md  DLT-026.md  DLT-027.md  DLT-028.md  DLT-029.md  DLT-030.md  DLT-032.md  DLT-034.md  DLT-036.md  DLT-037.md  DLT-038.md  DLT-041.md  DLT-072.md  DLT-073.md  DLT-087.md  DLT-090.md  DLT-092.md
docs/delta-specs/: DLT-001.md  DLT-002.md  DLT-003.md  DLT-004.md  DLT-005.md  DLT-006.md  DLT-008.md  DLT-010.md  DLT-012.md  DLT-013.md  DLT-018.md  DLT-020.md  DLT-021.md  DLT-023.md  DLT-024.md  DLT-025.md  DLT-026.md  DLT-027.md  DLT-028.md  DLT-029.md  DLT-030.md  DLT-032.md  DLT-034.md  DLT-036.md  DLT-037.md  DLT-038.md  DLT-041.md  DLT-072.md  DLT-073.md  DLT-079.md  DLT-084.md  DLT-087.md  DLT-090.md  DLT-091.md  DLT-092.md
docs/design/: DES-001-testing-conventions.md  DES-002-logging-conventions.md  DES-003-subsystem-bootstrap-hooks.md  DES-004-prompt-driven-forked-processor.md  DES-005-sdk-query-generator-consumption.md  DES-006-low-effort-classification-agent.md  DES-006-sdk-mcp-tool-server-factory.md  DES-007-low-effort-classification-agent.md  README.md
docs/feature-designs/: README.md
docs/feature-designs/agent/: README.md  boundary-detection.md  core-architecture.md  sessions.md  (+7 more)
docs/feature-specs/: README.md
docs/planning/: DELTAS.md  VISION.md
src/tachikoma/: __main__.py  adapter.py  agent_defaults.py  bootstrap.py  config.py  context.py  coordinator.py  database.py  db_utils.py  display.py  events.py  logging.py  message_post_processing.py  post_processing.py  pre_processing.py  repl.py  telegram.py  workspace.py
tests/: conftest.py  helpers.py  test_adapter.py  test_agent_defaults.py  test_bootstrap.py  test_config.py  test_context.py  test_coordinator.py  test_database.py  test_display.py  test_events.py  test_logging.py  test_message_post_processing.py  test_post_processing.py  test_pre_processing.py  test_repl.py  test_telegram.py  test_workspace.py
tests/boundary/: __init__.py  test_detector.py  test_summary.py
tests/context/: test_assembly.py  test_processor.py  test_tools.py
tests/git/: test_hooks.py  test_processor.py
tests/memory/: __init__.py  test_context_provider.py  test_episodic.py  test_facts.py  test_hooks.py  test_preferences.py
tests/projects/: __init__.py  test_context_provider.py  test_git.py  test_hooks.py  test_processor.py  test_tools.py
tests/sessions/: test_hooks.py  test_model.py  test_registry.py  test_repository.py
tests/skills/: test_context_provider.py  test_events.py  test_hooks.py  test_registry.py  test_watcher.py
tests/tasks/: __init__.py  conftest.py  test_coordinator_integration.py  test_events.py  test_executor.py  test_hooks.py  test_model.py  test_repository.py  test_scheduler.py  test_tools.py
(+93 files in other folders)
