[project]
name = "tachikoma-agent"
version = "1.0.2"
description = "A proactive personal assistant built on Claude Agent SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "claude-agent-sdk",
    "pydantic",
    "prompt-toolkit",
    "rich",
    "tomlkit",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "loguru>=0.7",
    "aiogram>=3.20",
    "telegramify-markdown>=1.0",
    "cyclopts",
    "python-frontmatter",
    "bubus>=1.5.6",
    "cronsim>=2.6",
    "watchfiles>=0.20",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "pytest-cov",
]

[tool.uv]
package = true

[project.scripts]
tachikoma = "tachikoma.__main__:cli"

[project.urls]
Homepage = "https://github.com/asermax/tachikoma"
Repository = "https://github.com/asermax/tachikoma"
Issues = "https://github.com/asermax/tachikoma/issues"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tachikoma"

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock && uv build"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.ruff]
line-length = 100
src = ["src"]
lint.select = ["C4", "E", "ERA", "F", "I", "PLC", "SIM", "TID", "UP", "N", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (run with '-m slow' to include)",
]

[tool.ty.src]
exclude = ["tests"]
